objects/Five9LSP__Five9_LSP_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Five9LSP__API_Batch_Size__c</fullName>
        <defaultValue>0</defaultValue>
        <description>A flag to determine if list items should be deleted immediately or if they should be deferred to the relax job</description>
        <inlineHelpText>0 means deletes are processed immediately, 1 means they will be deferred.</inlineHelpText>
        <label>Defer List Item Deletion</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9LSP__API_Ongoing_Batch_Size__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Toggles on/off the sync&apos;ing with five9, setting to 0 turns off sync, setting to 1 enables sync</description>
        <inlineHelpText>0 disables synchronization, 1 enables it</inlineHelpText>
        <label>Toggle Five9 Sync</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Five9LSP__Statuses_to_retry__c</fullName>
        <defaultValue>&quot;&apos;pending&apos;,&apos;715&apos;,&apos;-1&apos;,&apos;-3&apos;&quot;</defaultValue>
        <description>Comma delimited list of list sync failure statuses to reattempt to sync. Quote all values in single quotes (&apos;). Ex: &apos;pending&apos;,&apos;715&apos;,&apos;-1&apos;</description>
        <label>Statuses to retry</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Five9 List Sync Plus Settings</label>
</CustomObject>